[gd_scene load_steps=3 format=3 uid="uid://bk58v53f0p25f"]

[ext_resource type="Script" uid="uid://to7r7nkwslm0" path="res://scripts/display/asteroid_display.gd" id="1_rre6a"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rre6a"]
radius = 48.6621

[node name="Asteroid" type="Node2D"]
script = ExtResource("1_rre6a")

[node name="Rotor" type="Node2D" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="Rotor"]
position = Vector2(9, 0)
scale = Vector2(0.52671754, 0.52671754)
color = Color(0.51, 0.31058997, 0.1581, 1)
polygon = PackedVector2Array(33, -22, 53, 37, -31, 77, -78, 10, -34, -72)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_rre6a")

[node name="ResourceRows" type="Node2D" parent="."]
position = Vector2(0, 51)

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
